syntax = "proto3";

package im;
option java_package = "com.hiraeth.im.protocol";
option java_outer_classname = "MessageForwardResponseProto";

import "StatusCode.proto";

message MessageForwardResponse{
    bool success = 1;
    StatusCode code = 2; // 错误码
    string message = 3;  // 提示信息

    string sender_id = 4;
    string receiver_id = 5;
    int64 message_id = 6; // 消息id
}
